// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`claimsMatch / assertClaims refuse a matcher value no operator is lifted from > assert refuses a symbol under the wire-neutral code, title and type 1`] = `
{
  "code": "claim_matcher_unsupported_value",
  "data": {
    "key": "subject",
  },
  "message": "Unsupported value for key: subject",
  "title": "Claim Matcher Unsupported Value",
  "type": "urn:lindorm:aegis:error:claim_matcher_unsupported_value",
}
`;

exports[`claimsMatch / assertClaims refuse a matcher value no operator is lifted from > assert refuses null under the wire-neutral code, title and type 1`] = `
{
  "code": "claim_matcher_unsupported_value",
  "data": {
    "key": "subject",
  },
  "message": "Unsupported value for key: subject",
  "title": "Claim Matcher Unsupported Value",
  "type": "urn:lindorm:aegis:error:claim_matcher_unsupported_value",
}
`;

exports[`claimsMatch / assertClaims refuse a matcher value no operator is lifted from > matches refuses a symbol under the wire-neutral code, title and type 1`] = `
{
  "code": "claim_matcher_unsupported_value",
  "data": {
    "key": "subject",
  },
  "message": "Unsupported value for key: subject",
  "title": "Claim Matcher Unsupported Value",
  "type": "urn:lindorm:aegis:error:claim_matcher_unsupported_value",
}
`;

exports[`claimsMatch / assertClaims refuse a matcher value no operator is lifted from > matches refuses null under the wire-neutral code, title and type 1`] = `
{
  "code": "claim_matcher_unsupported_value",
  "data": {
    "key": "subject",
  },
  "message": "Unsupported value for key: subject",
  "title": "Claim Matcher Unsupported Value",
  "type": "urn:lindorm:aegis:error:claim_matcher_unsupported_value",
}
`;

exports[`createJwtValidate / createIdentityMatchers parity > should build the assert predicate 1`] = `
{
  "audience": {
    "$all": [
      "https://tyr.test",
    ],
  },
  "authMethods": {
    "$all": [
      "pwd",
      "otp",
    ],
  },
  "entitlements": {
    "$all": [
      "premium",
    ],
  },
  "groups": {
    "$all": [
      "staff",
    ],
  },
  "issuer": {
    "$eq": "https://idp.test",
  },
  "levelOfAssurance": {
    "$eq": 3,
  },
  "permissions": {
    "$all": [
      "read",
    ],
  },
  "roles": {
    "$in": [
      "admin",
      "editor",
    ],
  },
  "scope": {
    "$all": [
      "openid",
    ],
  },
  "subject": {
    "$eq": "user-1",
  },
}
`;

exports[`createJwtValidate / createIdentityMatchers parity > should build the verify predicate unchanged 1`] = `
{
  "amr": {
    "$all": [
      "pwd",
      "otp",
    ],
  },
  "aud": {
    "$all": [
      "https://tyr.test",
    ],
  },
  "entitlements": {
    "$all": [
      "premium",
    ],
  },
  "groups": {
    "$all": [
      "staff",
    ],
  },
  "iss": {
    "$eq": "https://idp.test",
  },
  "loa": {
    "$eq": 3,
  },
  "permissions": {
    "$all": [
      "read",
    ],
  },
  "roles": {
    "$in": [
      "admin",
      "editor",
    ],
  },
  "scope": {
    "$all": [
      "openid",
    ],
  },
  "sub": {
    "$eq": "user-1",
  },
}
`;
